--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </tr>
                 </thead>
                 <tbody id='elementsList'>
-                    <tr id=''>
+                    <tr id='' class='tbodyTr'>
                         <td style='width: 7.5% !important;'>Null</td>
                         <td style='width: 22.5% !important;'>Null</td>
                         <td style='width: 50%; !important'>Null</td>
@@ -41,6 +41,7 @@
                     </tr>
                 </tbody>
             </table>
+            <a href='#' onclick='return false;'><div id='irArriba'>Volver arriba</div></a>
         </div>
         <div id='lb_background'></div>
         <div id='lb_container'>
