--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Elo Hell Database</title>
         <meta charset="utf-8">
         <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script src="js/lib/jquery-1.11.2.min.js"></script>
